fixed more spacing issues

--- a/css/styles-new.css
+++ b/css/styles-new.css
@@ -65,8 +65,8 @@ legend {
     margin-bottom: 1em;
 }
 
-.label-spacing2 {
-    margin-top: .5em;
+.label-spacing {
+    margin-bottom: .5em;
 }
 
 input,
